# ImmigrationChatbot

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  MOBILE_DEPLOYMENT.md  PWA_DEPLOYMENT_COMPLETE.md  Procfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway-frontend.json  railway.json
frontend/: package-lock.json  package.json
frontend/pages/: index.js
frontend/styles/: globals.css
prompts/: convert_requirements_to_code.prompt.md  generate_acceptance_criteria.prompt.md  generate_micro_requirements.prompt.md
public/: index.html  manifest.json  sw.js
requirement/: acceptance-criteria.md  immigration-chatbot-requirement.md  micro-requirements.md
scripts/: run_backend.sh
src/immigration_chatbot/: __init__.py  api.py  cli.py  engine.py  knowledge.py  llm.py  memory.py  static_frontend.html
tests/: test_api.py  test_engine.py
